@@ -1,5 +1,6 @@
 Version 2.0.2
 * Post DiFX-2.6
+* mk6gather: add command line arguments for output and verbosity
 
 Version 2.0.1
 * add "mark6gather" functions (were in vdifio).  These have partially overlapping functionality w/ the mark6sg functions.
